--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,7 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: ${{ secrets.SSH_PORT }}
         script: |
-          cd /var/www/html
+          cd /www/wwwroot/todo.pupupu.my
           git pull origin main
           composer install --no-dev --optimize-autoloader
           php artisan migrate --force
